--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*****************************************************************
 Theme Name: Seattle Democratic Socialists of America 2016
-Theme URI: http://seattledsa.org/
+Theme URI: https://github.com/SeattleDSA/dsa_wordpress
 Description: Designed by the Design & Communications Team at the Seattle Democratic Socialists of America. Developed using Joints WP, a barebones theme making use of Foundation 6 for Sites.
 Author: Seattle Democratic Socialists of America (based on Joints WP)
-Author URI: http://www.yoururlhere.com
+Author URI: https://github.com/SeattleDSA/dsa_wordpress
 Version: 4.0
 License: GNU General Public License & MIT
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
