--- a/style.css
+++ b/style.css
@@ -13,6 +13,6 @@ Tags: Sass
 /*
 	
 This file isn't loaded by WordPress.
-Make your changes to assets/css/style.css
+Make your changes to assets/css/style.css then save as /asssets/css/style.min.css
 
 */
